# internal/routes/order_routes.go
@@ -1,15 +1,18 @@
 package routes
 
 import (
+	firebase "firebase.google.com/go/v4"
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
 	"github.com/kimbasn/printly/internal/controller"
+	"github.com/kimbasn/printly/internal/entity"
+	"github.com/kimbasn/printly/internal/middlewares"
 	"github.com/kimbasn/printly/internal/repository"
 	"github.com/kimbasn/printly/internal/service"
 	"gorm.io/gorm"
 )
 
-func RegisterOrderRoutes(rg *gin.RouterGroup, db *gorm.DB, validate *validator.Validate) {
+func RegisterOrderRoutes(rg *gin.RouterGroup, db *gorm.DB, validate *validator.Validate, fbApp *firebase.App) {
 	// Repositories
 	orderRepo := repository.NewOrderRepository(db)
 	printCenterRepo := repository.NewPrintCenterRepository(db)
@@ -19,26 +22,26 @@ func RegisterOrderRoutes(rg *gin.RouterGroup, db *gorm.DB, validate *validator.V
 	orderService := service.NewOrderService(orderRepo, printCenterRepo, userRepo)
 	orderController := controller.NewOrderController(orderService, validate)
 
-	// Middleware
-
-	// Public routers
+	// Public route for checking order status
 	rg.GET("/orders/status/:code", orderController.GetOrderByCode)
 
-	// Authenticated routes
-	authed := rg.Group("/")
-	
 	// Any authenticated user
-	authed.POST("/centers/:id/orders", orderController.CreateOrder)
-	
-	// A manager or admin
-	authed.GET("/centers/:id/orders", orderController.GetOrdersForCenter)
-	authed.PATCH("/orders/:id/status", orderController.UpdateOrderStatus)
+	authed := rg.Group("/")
+	authed.Use(middlewares.AuthenticationMiddleware(fbApp, db))
+	{
+		// any authenticated user
+		authed.POST("/centers/:id/orders", orderController.CreateOrder)
 
+		// manager + admin
+		authed.GET("centers/:id/orders", middlewares.RoleMiddleware(entity.RoleManager, entity.RoleAdmin), orderController.GetOrdersForCenter)
+		authed.PATCH("/orders/:id/status", middlewares.RoleMiddleware(entity.RoleManager, entity.RoleAdmin), orderController.UpdateOrderStatus)
+	}
 
 	// Admin-specific routes
 	admin := rg.Group("/admin")
-	orders := admin.Group("/orders")
-	orders.GET("/", orderController.GetAllOrders)
-	orders.GET("/:id", orderController.GetOrderByID)
-	orders.DELETE("/:id", orderController.DeleteOrder)
+	admin.Use(middlewares.AuthenticationMiddleware(fbApp, db),
+		middlewares.RoleMiddleware(entity.RoleAdmin))
+	admin.GET("/orders", orderController.GetAllOrders)
+	admin.GET("orders/:id", orderController.GetOrderByID)
+	admin.DELETE("orders/:id", orderController.DeleteOrder)
 }
