# internal/routes/print_center_routes.go
@@ -1,44 +1,45 @@
 package routes
 
 import (
+	firebase "firebase.google.com/go/v4"
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
 	"github.com/kimbasn/printly/internal/controller"
+	"github.com/kimbasn/printly/internal/entity"
+	"github.com/kimbasn/printly/internal/middlewares"
 	"github.com/kimbasn/printly/internal/repository"
 	"github.com/kimbasn/printly/internal/service"
 	"gorm.io/gorm"
 )
 
-func RegisterPrintCenterRoutes(rg *gin.RouterGroup, db *gorm.DB, validate *validator.Validate) {
+func RegisterPrintCenterRoutes(rg *gin.RouterGroup, db *gorm.DB, validate *validator.Validate, fbApp *firebase.App) {
 	repo := repository.NewPrintCenterRepository(db)
 	svc := service.NewPrintCenterService(repo)
-	ctrl := controller.NewPrintCenterController(svc, validate)
+	printCenterController := controller.NewPrintCenterController(svc, validate)
 
 	// Publicly accessible print center routes
 	publicCenters := rg.Group("/centers")
 	{
-		publicCenters.GET("/", ctrl.GetAllPublicPrintCenters)
-		publicCenters.GET("/:id", ctrl.GetPrintCenterByID)
+		publicCenters.GET("/", printCenterController.GetAllPublicPrintCenters)
+		publicCenters.GET("/:id", printCenterController.GetPrintCenterByID)
 	}
 
-	// Authenticated routes for print centers.
-	// In a real app, this group would have an auth middleware.
-	authedCenters := rg.Group("/centers")
-	// authedCenters.Use(auth.Middleware()) // Example
+	// Authenticated routes for any logged-in user.
+	authed := rg.Group("/")
+	authed.Use(middlewares.AuthenticationMiddleware(fbApp, db))
 	{
-		authedCenters.POST("/", ctrl.CreatePrintCenter)
-		authedCenters.PUT("/:id", ctrl.UpdatePrintCenter)
+		authed.POST("/centers", printCenterController.CreatePrintCenter) //  any authenticated user
+		authed.PUT("/centers/:id", middlewares.RoleMiddleware(entity.RoleManager, entity.RoleAdmin), printCenterController.UpdatePrintCenter)
 	}
 
 	// Admin-specific routes for managing print centers.
-	// This group would have an admin-only auth middleware.
-	adminCenters := rg.Group("/admin/centers")
-	// adminCenters.Use(auth.AdminMiddleware()) // Example
+	admin := rg.Group("/admin")
+	admin.Use(middlewares.AuthenticationMiddleware(fbApp, db),
+		middlewares.RoleMiddleware(entity.RoleAdmin))
 	{
-		adminCenters.GET("/", ctrl.GetAllPrintCenters)
-		adminCenters.GET("/pending", ctrl.GetPendingPrintCenters)
-		adminCenters.PATCH("/:id/status", ctrl.UpdatePrintCenterStatus)
-		adminCenters.DELETE("/:id", ctrl.DeletePrintCenter)
+		admin.GET("/centers", printCenterController.GetAllPrintCenters)
+		admin.GET("/centers/pending", printCenterController.GetPendingPrintCenters)
+		admin.PATCH("centers/:id/status", printCenterController.UpdatePrintCenterStatus)
+		admin.DELETE("centers/:id", printCenterController.DeletePrintCenter)
 	}
 }
-
